# brocode

./: .bazelignore  .bazelrc  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  MODULE.bazel  NOTICE  README.md  SECURITY.md  announcement_tip.toml  cliff.toml  defs.bzl  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rbe.bzl
brocode-rs/analytics/: BUILD.bazel  Cargo.toml
brocode-rs/analytics/src/: analytics_client.rs  analytics_client_tests.rs
brocode-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
brocode-rs/app-server-client/: BUILD.bazel  Cargo.toml  README.md
brocode-rs/app-server-client/src/: lib.rs  remote.rs
brocode-rs/app-server-protocol/: BUILD.bazel  Cargo.toml
brocode-rs/app-server-protocol/schema/json/: ApplyPatchApprovalParams.json  ChatgptAuthTokensRefreshParams.json  ClientRequest.json  ExecCommandApprovalParams.json  FuzzyFileSearchResponse.json  FuzzyFileSearchSessionUpdatedNotification.json  McpServerElicitationRequestParams.json  ServerNotification.json  ServerRequest.json  brocode_app_server_protocol.schemas.json  (+1 more)
brocode-rs/app-server-protocol/src/: experimental_api.rs  export.rs  jsonrpc_lite.rs  lib.rs
brocode-rs/app-server-protocol/tests/: schema_fixtures.rs
brocode-rs/app-server-test-client/: BUILD.bazel  Cargo.toml  README.md
brocode-rs/app-server-test-client/scripts/: live_elicitation_hold.sh
brocode-rs/app-server-test-client/src/: lib.rs  main.rs
brocode-rs/app-server/src/: app_server_tracing.rs  bespoke_event_handling.rs  brocode_message_processor.rs  command_exec.rs  config_api.rs  dynamic_tools.rs  external_agent_config_api.rs  filters.rs  fs_api.rs  fs_watch.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs  server_request_error.rs  thread_state.rs  thread_status.rs  transport.rs
brocode-rs/arg0/: BUILD.bazel  Cargo.toml
brocode-rs/arg0/src/: lib.rs
brocode-rs/chatgpt/: BUILD.bazel  Cargo.toml  README.md
brocode-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  connectors.rs  get_task.rs
brocode-rs/chatgpt/tests/: task_turn_fixture.json
brocode-rs/cli/: BUILD.bazel  Cargo.toml
brocode-rs/cli/src/: app_cmd.rs  debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  wsl_paths.rs
brocode-rs/cli/tests/: debug_clear_memories.rs  execpolicy.rs  features.rs  mcp_add_remove.rs  mcp_list.rs
brocode-rs/cloud-requirements/: BUILD.bazel  Cargo.toml
brocode-rs/cloud-requirements/src/: lib.rs
brocode-rs/core/: BUILD.bazel  Cargo.toml  README.md  config.schema.json  gpt-5.1-brocode-max_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_brocode_prompt.md  models.json  prompt.md  prompt_with_apply_patch_instructions.md
brocode-rs/core-skills/: BUILD.bazel  Cargo.toml
brocode-rs/core-skills/src/: config_rules.rs  injection.rs  injection_tests.rs  invocation_utils_tests.rs  loader.rs  loader_tests.rs  manager.rs  manager_tests.rs  model.rs  remote.rs  render.rs  system.rs
brocode-rs/core/src/: api_bridge.rs  api_bridge_tests.rs  apply_patch.rs  arc_monitor.rs  arc_monitor_tests.rs  auth_env_telemetry.rs  brocode.rs  brocode_delegate.rs  brocode_delegate_tests.rs  brocode_tests.rs  brocode_tests_guardian.rs  brocode_thread.rs  client.rs  client_common.rs  client_common_tests.rs  client_tests.rs  command_canonicalization.rs  command_canonicalization_tests.rs  commit_attribution.rs  commit_attribution_tests.rs  compact.rs  compact_remote.rs  compact_tests.rs  connectors.rs  connectors_tests.rs  consequential_tool_message_templates.json  contextual_user_message.rs  contextual_user_message_tests.rs  custom_prompts.rs  default_client_forwarding.rs  environment_context.rs  error.rs  error_tests.rs  event_mapping.rs  event_mapping_tests.rs  exec.rs  exec_env.rs  exec_env_tests.rs  exec_policy.rs  exec_policy_tests.rs  (+68 more)
brocode-rs/core/tests/: responses_headers.rs
brocode-rs/exec/: BUILD.bazel  Cargo.toml
brocode-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  exec_events.rs  lib.rs  main.rs
brocode-rs/exec/tests/: event_processor_with_json_output.rs
brocode-rs/execpolicy/: BUILD.bazel  Cargo.toml  README.md
brocode-rs/execpolicy/src/: main.rs  parser.rs  policy.rs  rule.rs
brocode-rs/execpolicy/tests/: basic.rs
brocode-rs/features/: BUILD.bazel  Cargo.toml
brocode-rs/features/src/: lib.rs  tests.rs
brocode-rs/hooks/: BUILD.bazel  Cargo.toml
brocode-rs/hooks/src/: legacy_notify.rs  registry.rs  schema.rs  types.rs  user_notification.rs
brocode-rs/instructions/: BUILD.bazel  Cargo.toml
brocode-rs/instructions/src/: fragment.rs  lib.rs  user_instructions.rs  user_instructions_tests.rs
brocode-rs/linux-sandbox/: BUILD.bazel  Cargo.toml  README.md  build.rs  config.h
brocode-rs/linux-sandbox/src/: bwrap.rs  landlock.rs  launcher.rs  lib.rs  linux_run_main.rs  linux_run_main_tests.rs  main.rs  proxy_routing.rs  vendored_bwrap.rs
brocode-rs/lmstudio/: BUILD.bazel  Cargo.toml
brocode-rs/lmstudio/src/: client.rs  lib.rs
brocode-rs/login/: BUILD.bazel  Cargo.toml
brocode-rs/login/src/: device_code_auth.rs  lib.rs  server.rs
brocode-rs/plugin/: BUILD.bazel  Cargo.toml
brocode-rs/plugin/src/: lib.rs  load_outcome.rs  plugin_namespace.rs
brocode-rs/rollout/: BUILD.bazel  Cargo.toml
brocode-rs/rollout/src/: config.rs  lib.rs  list.rs  metadata.rs  metadata_tests.rs  policy.rs  recorder.rs  recorder_tests.rs  session_index.rs  state_db.rs  tests.rs
brocode-rs/sandboxing/: BUILD.bazel  Cargo.toml
brocode-rs/sandboxing/src/: bwrap.rs  landlock.rs  macos_permissions.rs  macos_permissions_tests.rs  manager.rs  manager_tests.rs  policy_transforms.rs  policy_transforms_tests.rs  seatbelt.rs  seatbelt_base_policy.sbpl  seatbelt_network_policy.sbpl  seatbelt_permissions.rs  seatbelt_tests.rs
brocode-rs/skills/: BUILD.bazel  Cargo.toml
brocode-rs/skills/src/: lib.rs
brocode-rs/stdio-to-uds/: BUILD.bazel  Cargo.toml  README.md
brocode-rs/stdio-to-uds/src/: main.rs
brocode-rs/stdio-to-uds/tests/: stdio_to_uds.rs
(+1520 files in other folders)
