[package]
edition.workspace = true
license.workspace = true
name = "brocode-analytics"
version.workspace = true

[lib]
doctest = false
name = "brocode_analytics"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
brocode-git-utils = { workspace = true }
brocode-login = { workspace = true }
brocode-plugin = { workspace = true }
brocode-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha1 = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
