[package]
name = "brocode-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "brocode_app_server_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
brocode-app-server = { workspace = true }
brocode-app-server-protocol = { workspace = true }
brocode-arg0 = { workspace = true }
brocode-core = { workspace = true }
brocode-feedback = { workspace = true }
brocode-protocol = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
