[package]
name = "brocode-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "brocode-app-server"
path = "src/main.rs"

[[bin]]
name = "brocode-app-server-test-notify-capture"
path = "src/bin/notify_capture.rs"

[lib]
name = "brocode_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "ws",
] }
brocode-arg0 = { workspace = true }
brocode-cloud-requirements = { workspace = true }
brocode-core = { workspace = true }
brocode-exec-server = { workspace = true }
brocode-features = { workspace = true }
brocode-git-utils = { workspace = true }
brocode-otel = { workspace = true }
brocode-shell-command = { workspace = true }
brocode-utils-cli = { workspace = true }
brocode-utils-pty = { workspace = true }
brocode-backend-client = { workspace = true }
brocode-file-search = { workspace = true }
brocode-chatgpt = { workspace = true }
brocode-login = { workspace = true }
brocode-protocol = { workspace = true }
brocode-app-server-protocol = { workspace = true }
brocode-feedback = { workspace = true }
brocode-rmcp-client = { workspace = true }
brocode-sandboxing = { workspace = true }
brocode-state = { workspace = true }
brocode-tools = { workspace = true }
brocode-utils-absolute-path = { workspace = true }
brocode-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
constant_time_eq = { workspace = true }
futures = { workspace = true }
hmac = { workspace = true }
jsonwebtoken = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
app_test_support = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
core_test_support = { workspace = true }
brocode-utils-cargo-bin = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
rmcp = { workspace = true, default-features = false, features = [
    "elicitation",
    "server",
    "transport-streamable-http-server",
] }
serial_test = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing-opentelemetry = { workspace = true }
wiremock = { workspace = true }
shlex = { workspace = true }
