load("//:defs.bzl", "brocode_rust_crate")

brocode_rust_crate(
    name = "core-skills",
    crate_name = "brocode_core_skills",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ),
)
