[package]
edition.workspace = true
license.workspace = true
name = "brocode-core-skills"
version.workspace = true

[lib]
doctest = false
name = "brocode_core_skills"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
brocode-analytics = { workspace = true }
brocode-app-server-protocol = { workspace = true }
brocode-config = { workspace = true }
brocode-instructions = { workspace = true }
brocode-login = { workspace = true }
brocode-otel = { workspace = true }
brocode-protocol = { workspace = true }
brocode-skills = { workspace = true }
brocode-utils-absolute-path = { workspace = true }
brocode-utils-plugins = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
toml = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
