[package]
edition.workspace = true
license.workspace = true
name = "brocode-core"
version.workspace = true

[lib]
doctest = false
name = "brocode_core"
path = "src/lib.rs"

[[bin]]
name = "brocode-write-config-schema"
path = "src/bin/config_schema.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bm25 = { workspace = true }
chardetng = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
brocode-analytics = { workspace = true }
brocode-api = { workspace = true }
brocode-app-server-protocol = { workspace = true }
brocode-apply-patch = { workspace = true }
brocode-async-utils = { workspace = true }
brocode-code-mode = { workspace = true }
brocode-connectors = { workspace = true }
brocode-config = { workspace = true }
brocode-core-skills = { workspace = true }
brocode-exec-server = { workspace = true }
brocode-features = { workspace = true }
brocode-login = { workspace = true }
brocode-shell-command = { workspace = true }
brocode-execpolicy = { workspace = true }
brocode-git-utils = { workspace = true }
brocode-hooks = { workspace = true }
brocode-instructions = { workspace = true }
brocode-network-proxy = { workspace = true }
brocode-otel = { workspace = true }
brocode-plugin = { workspace = true }
brocode-protocol = { workspace = true }
brocode-rollout = { workspace = true }
brocode-rmcp-client = { workspace = true }
brocode-sandboxing = { workspace = true }
brocode-state = { workspace = true }
brocode-terminal-detection = { workspace = true }
brocode-utils-absolute-path = { workspace = true }
brocode-utils-cache = { workspace = true }
brocode-utils-image = { workspace = true }
brocode-utils-home-dir = { workspace = true }
brocode-utils-output-truncation = { workspace = true }
brocode-utils-path = { workspace = true }
brocode-utils-plugins = { workspace = true }
brocode-utils-pty = { workspace = true }
brocode-utils-readiness = { workspace = true }
brocode-secrets = { workspace = true }
brocode-utils-string = { workspace = true }
brocode-utils-stream-parser = { workspace = true }
brocode-utils-template = { workspace = true }
brocode-windows-sandbox = { package = "brocode-windows-sandbox", path = "../windows-sandbox-rs" }
csv = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
encoding_rs = { workspace = true }
env-flags = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
iana-time-zone = { workspace = true }
image = { workspace = true, features = ["jpeg", "png", "webp"] }
indexmap = { workspace = true }
libc = { workspace = true }
notify = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
shlex = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
which = { workspace = true }
wildmatch = { workspace = true }
zip = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
seccompiler = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

# Build OpenSSL from source for musl builds.
[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

# Build OpenSSL from source for musl builds.
[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

[target.'cfg(unix)'.dependencies]
brocode-shell-escalation = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
brocode-arg0 = { workspace = true }
brocode-otel = { workspace = true, features = [
    "disable-default-metrics-exporter",
] }
brocode-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
ctor = { workspace = true }
insta = { workspace = true }
maplit = { workspace = true }
opentelemetry = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
test-case = "3.3.1"
opentelemetry_sdk = { workspace = true, features = [
    "experimental_metrics_custom_reader",
    "metrics",
] }
serial_test = { workspace = true }
tempfile = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
walkdir = { workspace = true }
wiremock = { workspace = true }
zstd = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["openssl-sys"]
