[package]
name = "brocode-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[[bin]]
name = "brocode-exec"
path = "src/main.rs"

[lib]
name = "brocode_exec"
path = "src/lib.rs"

[[test]]
name = "all"
path = "tests/all.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
brocode-arg0 = { workspace = true }
brocode-app-server-client = { workspace = true }
brocode-app-server-protocol = { workspace = true }
brocode-cloud-requirements = { workspace = true }
brocode-core = { workspace = true }
brocode-feedback = { workspace = true }
brocode-git-utils = { workspace = true }
brocode-otel = { workspace = true }
brocode-protocol = { workspace = true }
brocode-utils-absolute-path = { workspace = true }
brocode-utils-cli = { workspace = true }
brocode-utils-oss = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
uuid = { workspace = true }


[dev-dependencies]
assert_cmd = { workspace = true }
brocode-apply-patch = { workspace = true }
brocode-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
libc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }
