[package]
name = "brocode-execpolicy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Brocode exec policy: prefix-based Starlark rules for command decisions."

[lib]
name = "brocode_execpolicy"
path = "src/lib.rs"

[[bin]]
name = "brocode-execpolicy"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
brocode-utils-absolute-path = { workspace = true }
multimap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
starlark = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
