load("//:defs.bzl", "brocode_rust_crate")

brocode_rust_crate(
    name = "features",
    crate_name = "brocode_features",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ) + [
        "//brocode-rs:node-version.txt",
    ],
)
