[package]
edition.workspace = true
license.workspace = true
name = "brocode-instructions"
version.workspace = true

[lib]
doctest = false
name = "brocode_instructions"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
brocode-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
