load("//:defs.bzl", "brocode_rust_crate")

brocode_rust_crate(
    name = "plugin",
    crate_name = "brocode_plugin",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ),
)
