[package]
edition.workspace = true
license.workspace = true
name = "brocode-rollout"
version.workspace = true

[lib]
doctest = false
name = "brocode_rollout"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
brocode-file-search = { workspace = true }
brocode-git-utils = { workspace = true }
brocode-login = { workspace = true }
brocode-otel = { workspace = true }
brocode-protocol = { workspace = true }
brocode-state = { workspace = true }
brocode-utils-path = { workspace = true }
brocode-utils-string = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = [
    "formatting",
    "local-offset",
    "macros",
    "parsing",
] }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt",
    "sync",
    "time",
] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
