load("//:defs.bzl", "brocode_rust_crate")

brocode_rust_crate(
    name = "skills",
    crate_name = "brocode_skills",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ),
)
