[package]
edition.workspace = true
license.workspace = true
name = "brocode-skills"
version.workspace = true
build = "build.rs"

[lib]
doctest = false
name = "brocode_skills"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
brocode-utils-absolute-path = { workspace = true }
include_dir = { workspace = true }
thiserror = { workspace = true }
